# epiphany

./: .gitignore  LICENSE  Makefile  README.md  live_capture.py  requirements.txt  show_capture.py  test_capture.py
capture/: README.md
docs/: README.md  development-guide.md  project-summary.md  usb-analysis.md
driver/: microscope_driver.py
examples/: basic_usage.py
gui/: microscope_gui.py
microscope-gui-rust/: Cargo.toml  Makefile  README.md  build.rs  install_deps.sh
microscope-gui-rust/src/: main.rs
microscope-tauri-app/: README.md  package.json
microscope-tauri-app/docs/: README.md  api-reference.md  development-guide.md
microscope-tauri-app/src/: App.css  App.tsx
microscope-tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
microscope-tauri-app/src-tauri/src/: lib.rs  main.rs
microscope-tauri-app/src-tauri/src/commands/: file.rs  microscope.rs  mod.rs
microscope-tauri-app/src-tauri/src/models/: microscope.rs  mod.rs
microscope-tauri-app/src-tauri/src/utils/: config.rs  error.rs  mod.rs  python.rs
microscope-tauri-app/src/components/: index.ts
microscope-tauri-app/src/components/Controls/: Controls.css  Controls.tsx
microscope-tauri-app/src/components/Display/: Display.css  Display.tsx
microscope-tauri-app/src/components/Header/: Header.css  Header.tsx
microscope-tauri-app/src/components/Logs/: Logs.css  Logs.tsx
microscope-tauri-app/src/hooks/: index.ts  useMicroscope.ts  useStreaming.ts
microscope-tauri-app/src/types/: index.ts
tests/: test_driver.py
tools/: setup_environment.sh  usb_scanner.py
