[package]
name = "microscope-gui-rust"
version = "0.1.0"
edition = "2021"
description = "USB Microscope GUI Application for Ubuntu"
authors = ["USB Microscope Project"]
license = "MIT"

[dependencies]
# GUI Framework
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }

# Video Capture
opencv = { version = "0.93", default-features = false, features = [
    "videoio",
    "imgproc",
    "imgcodecs",
] }

# Image Processing
image = "0.25"

# Async Processing
tokio = { version = "1.0", features = ["full"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Time Handling
chrono = { version = "0.4", features = ["serde"] }

# File Dialog
rfd = "0.15"

# USB Device Access (if needed)
rusb = "0.9"

[build-dependencies]
pkg-config = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
