[package]
name = "epiphany"
version = "1.0.0"
description = "Professional USB microscope software that makes microscopy accessible to everyone with affordable hardware"
authors = ["Epiphany Project <epiphany@example.com>"]
license = "MIT"
repository = "https://github.com/your-username/epiphany-microscope"
keywords = ["microscope", "usb", "science", "education", "imaging"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "epiphany_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
image = "0.25"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"

